Fixed: wflow-consoleweb - Builders' title is not visible on IE.
git-svn-id: http://dev.joget.org/svn/jw-community/trunk@13 1bff935d-2fe2-40b7-b00f-c2aca69a7612

--- a/wflow-consoleweb/src/main/webapp/css/dbuilder.css
+++ b/wflow-consoleweb/src/main/webapp/css/dbuilder.css
@@ -27,9 +27,8 @@ div, label, input, button, select, th, td, a {
     border: 1px solid #bfbfbf;
 }
 #builder-title {
-    color: #f6f6f6;
+    color: #AAA7A7;
     font-size: 22px;
-    text-shadow: 1px 1px 0 #767676;
     text-transform: uppercase;
     line-height: 28px;
     padding-top: 5px;
